--- a/src/Application/TwitterBundle/Resources/views/Default/index.html.twig
+++ b/src/Application/TwitterBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,13 @@
-Hello {{ name }}!
+			<ul>
+			    {% for item in items %}
+					<li>
+						<span class="date">
+							<b>{{ item.user }}:</b>
+						</span> 
+						<a href="#">{{ item.tweet|raw }}</a>
+					</li>
+			    {% endfor %}
+    
+			</ul>
+			
+								
